fix modal not visible

--- a/FrontEnd/styles/modal.css
+++ b/FrontEnd/styles/modal.css
@@ -1,26 +1,30 @@
 
 .modal {
-    display: none;
+    display: block;
     position: fixed;
-    z-index: 1000;
+    z-index: 9999;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    margin: 15% auto;
     padding: 30px;
     border-radius: 8px;
-    width: 60%;
+    width: 35%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 
 .modal-content i {
     height: 24px;
